--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -250,3 +250,9 @@
         font-size: 16px
         margin-top: 15px
         line-height: 16px
+
+        .title_white
+        font-size: 16px
+        margin-top: 15px
+        line-height: 16px
+    
